@@ -8,4 +8,4 @@
 #
 # ContribName                    Location
 GenericSubtractor                tags/0.99.1
-JetFFMoments                     tags/0.99
+JetFFMoments                     tags/0.99.1
